--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -9,3 +9,6 @@ $banner_padding: 500px;
 $banner_border_color: #65696e;
 $service_padding: 400px;
 $service_margin: 70px;
+$service_border_color: #D0CFCF;
+$service_width: 150px;
+$service_font_color: #3b434c;
