--- a/css/scss/_service.scss
+++ b/css/scss/_service.scss
@@ -1,49 +1,15 @@
 .Service {
-	padding: 7em;
+	padding: 3em;
+}
 
-	> .row,
-	div,
-	.Service__image {
-		display: flex;
-		justify-content: center;
-	}
+.Service__card {
+	margin-bottom: 3em;
+	padding: 1em 2em;
 
-	> .row {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
-		> div {
-			margin-right: $service_margin;
-			width: 200px;
-			max-width: 200px;
-
-			flex-direction: column;
-			align-items: center;
-
-			&:last-child { margin-right: 0; }
-		}
-	}
-
-	.Service__image {
-		padding: 3em;
-		width: $service_width;
-		max-width: $service_width;
-		height: $service_width;
-		border-radius: 50%;
-		border: 1px solid $service_border_color;
-	}
-
-	> .row > div {
-		
-		> h3 {
-			text-transform: uppercase;
-			padding-top: 1em;
-			padding-bottom: 1em;
-			font-size: 1.4em;
-			color: $service_font_color;
-		}
-
-		> p {
-			line-height: 1.8em;
-			text-align: center;
-		}	
-	}
+	@include media-item;
 }
