--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,14 +1,17 @@
 // colors
 $white: #fff;
+$black: #4a4a4a;
 
 // props
-$height: 650px;
+$height: 320px;
 $font_size: 60px;
 $font_color: #F7600E;
 $banner_padding: 500px;
 $banner_border_color: #65696e;
 $service_padding: 400px;
 $service_margin: 70px;
-$service_border_color: #D0CFCF;
+$service_border_color: #DFDCDC;
 $service_width: 150px;
 $service_font_color: #3b434c;
+$newsletter_height: 250px;
+$footer_color: #3b434c;
