--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,4 +1,5 @@
 @import '_variables';
+@import '_mixin';
 @import '_header';
 @import '_banner';
 @import '_service';
@@ -7,3 +8,5 @@
 @import '_feedback';
 @import '_team';
 @import '_contact';
+@import '_footer';
+@import '_queries';
