--- a/css/scss/_banner.scss
+++ b/css/scss/_banner.scss
@@ -1,59 +1,32 @@
 .header-banner-wrapper {
-	background: url('../img/banner.png') no-repeat;
-	background-size: cover;
-	height: $height;
-	max-height: $height;
-	width: 100%;
+	background: {
+		image: url('../img/banner.png');
+		repeat: no-repeat;
+		position: center;
+		size: cover;
+	}
 }
 
 .Banner {
-	> .row {
-		padding-top: 80px;
-		padding-left: $banner_padding;
-	    padding-right: $banner_padding;
-	    text-align: center;
+	color: $white;
+	padding: 0 2.5em;
+	height: $height;
+	@include site-title(2.5em);
 
-	    display: flex;
-	    flex-direction: column;
-	    align-items: center;
-	    justify-content: center;
+	ul.action,
+	div.down-arrow {
+		display: flex;
+		justify-content: center;
 	}
 
-	h2, p, a {
-		color: $white;
-	}
+	ul.action {
+		margin-top: 3em;
+		margin-bottom: 4em;
 
-	h2 {
-		color: $white;
-		text-transform: uppercase;
-		font-size: $font_size;
-		> span { color: $font_color; }
-	}
-
-	p {
-		line-height: 30px;
-		font-size: 17px;
-	}
-
-	.action {
-		padding-top: 60px;
-		padding-bottom: 150px;
-
-		> li > a {
-			width: 210px;
-		    padding: 10px;
-		    border-radius: 10px;
+		a.hire-us { 
+			@include button($font_color, 150px); 
+			margin-right: 1em;
 		}
-
-		> li > a.hire-us {
-			background: $font_color;
-		    text-transform: uppercase;
-		    border: 1px solid $font_color;
-		}
-
-		> li > a.our-work {
-		    text-transform: uppercase;
-		    border: 1px solid $banner_border_color;
-		}
+		a.our-work { @include button(url(0,0,0,.4), 150px); }
 	}
 }
