--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -1,20 +1,13 @@
 header {
-    padding-top: 50px;
+	padding: 2em;
 }
 
-.Logo {
-	padding-left: 400px;
-}
+.Menu____options {
+	display: flex;
+	align-items: center;
 
-.Menu__options {
-	display: inline-block;
-	padding-right: 400px;
-
-	> span, a {
-		color: $white;
-	}
-
-	& > span {
-		padding-right: 20px;
+	span { 
+		color: $white; 
+		margin-right: 1em;
 	}
 }
